--- a/package.json
+++ b/package.json
@@ -12,23 +12,20 @@
   "license": "ISC",
   "devDependencies": {
     "webpack-cli": "^4.5.0",
-    "webpack-dev-server": "^3.11.2"
-  },
-  "dependencies": {
+    "webpack-dev-server": "^3.11.2",
+    "webpack": "^5.23.0",
     "@babel/core": "^7.12.17",
     "@babel/preset-env": "^7.12.17",
     "@babel/preset-react": "^7.12.13",
     "babel-loader": "^8.2.2",
     "file-loader": "^6.2.0",
     "css-loader": "^5.0.2",
-    "html-webpack-plugin": "^5.2.0",
+    "style-loader": "^2.0.0",
+    "html-webpack-plugin": "^5.2.0"
+  },
+  "dependencies": {
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "style-loader": "^2.0.0",
-    "styled-components": "^5.2.1",
-    "webpack": "^5.23.0"
-  },
-  "resolutions": {
-    "styled-components": "^5"
+    "underscore": "^1.12.0"
   }
 }
