--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
   },
   "dependencies": {
     "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "underscore": "^1.12.0"
+    "react-dom": "^17.0.1"
   }
 }
